
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
__attribute__((used)) static bool right_parens_or_brackets(char *right)
{
   return right[0] == ')' || right[0] == ']';
}
